adicionados links para redes sociais e comando para adicionar CNAME

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - run: flutter config --enable-web
       - run: flutter pub get
       - run: flutter build web --release
+      - run: cp CNAME build/web
       - run: |
           cd build/web
           git init
