--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  url_launcher: ^5.4.1
+  flutter_svg: ^0.17.1
   flutter:
     sdk: flutter
 
@@ -18,7 +20,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - ./assets/
+    - assets/
 
   fonts:
     - family: Roboto
