--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   url_launcher: ^5.4.1
-  flutter_svg: ^0.17.1
+  responsive_builder: ^0.1.2
   flutter:
     sdk: flutter
 
