feat: removido layout responsivo e alterado script da action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Flutter Portfolio
 on:
   push:
-    branches:
-      - develop
+    tags:
+      - '*'
 jobs:
   build:
     name: Building Web App
