--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       - run: flutter build web --release
       - run: cp CNAME build/web
       - run: |
+          cp README_MASTER.md build/web
+          mv build/web/README_MASTER.md build/web/README.md
+      - run: |
           cd build/web
           git init
           git config --global user.email bruno@pimentel.dev
