--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.16",
+    "graphql": "^15.5.0",
     "next": "10.1.3",
     "next-images": "^1.7.0",
     "react": "17.0.2",
