--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
     "graphql": "^15.5.0",
     "next": "10.1.3",
     "next-images": "^1.7.0",
+    "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "file-loader": "^6.2.0",
+    "postcss": "^8.2.14",
+    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
 }
