--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "graphql": "^16.2.0",
-    "next": "12.0.7",
+    "next": "12.2.4",
     "next-images": "^1.7.0",
-    "next-themes": "^0.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-themes": "^0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.2.5",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.4",
