--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.2.4",
     "next-images": "^1.7.0",
     "next-themes": "^0.2.0",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
