--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.5.6",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/mdx": "^2.0.9",
     "graphql": "^16.6.0",
     "next": "12.3.1",
     "next-images": "^1.7.0",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-remark": "^2.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
