--- a/package.json
+++ b/package.json
@@ -1,43 +1,37 @@
 {
   "name": "pimentel.dev",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.0",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.5.6",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/mdx": "^2.0.9",
-    "graphql": "^16.6.0",
-    "next": "12.3.1",
-    "next-images": "^1.7.0",
-    "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
-    "prettier": "^2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-remark": "^2.1.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "@apollo/client": "^3.13.8",
+    "@tailwindcss/vite": "^4.1.11",
+    "graphql": "^16.11.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@types/node": "^18.8.3",
-    "@types/react": "^18.0.21",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.31.9",
-    "file-loader": "^6.2.0",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.8.4"
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.4"
   }
 }
