--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 9000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port 9999"
+    "preview": "vite preview --port 9001"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
